Attempt to fix a bug where background image is too large for mobile browser

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html {
 
 body {
     background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url("vectorbg.jpg");
-    background-size: cover;
+    background-size: auto;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
